# trading

./: .dockerignore  .env.example  .gitignore  .replit  DEPLOYMENT.md  Dockerfile  README.md  SETUP_INSTRUCTIONS.md  ai_trading_agent.py  app.py  auth_manager.py  config.py  database_manager.py  docker-compose.yml  ibkr_manager.py  ibkr_setup.py  market_data_manager.py  migrations_manager.py  openrouter_client.py  pyproject.toml  replit.md  requirements-docker.txt  risk_manager.py  trade_analytics.py
.streamlit/: config.toml
attached_assets/: Pasted-Deployment-is-Failed-2025-Nov-21-22-16-41-878793-Starting-deployment-of-megadoom99-trading-main-t-1763763431500_1763763431501.txt  Pasted-Deployment-is-Failed-2025-Nov-21-22-18-32-517786-Starting-deployment-of-megadoom99-trading-main-t-1763763548258_1763763548258.txt  Pasted-Deployment-is-Failed-2025-Nov-21-22-23-53-401045-Starting-deployment-of-trading-to-localhost-202-1763763901983_1763763901984.txt  Pasted-Logs-Server-localhost-postgres-sosc4gsc8gkgwwsk8gs8so4g-231431674233-Only-Show-Number-of-Lines-10-1763767086513_1763767086513.txt
migrations/: 001_initial_schema.sql
